# model-maker

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-memory.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  knowledge_update.md  translation.md
.github/workflows/: ci.yml  codeql.yml  deploy-website.yml  release.yml
app/: __init__.py  config_template.json  run.py
app/backend/: __init__.py  database.py  knowledge_rag.py  license_check.py  llm_engine.py  main.py  models.py  routes.py  voice_engine.py  voice_routes.py
app/frontend/: app.js  index.html  style.css  translations.js
app/knowledge/: bites_stings_poisoning.md  bleeding_wounds_burns.md  breathing_choking_cpr.md  chemical_gas_radiation.md  fractures_sprains_head.md  shelter_warmth_signals.md  shock_psychological.md  water_food_hygiene.md
brain/: context.md
docs/: api-reference.md  architecture.md  getting-started.md
models/: download.py  registry.json
scripts/: Install Model Maker.command  install-mac.sh  install.sh  setup.sh
tests/: conftest.py  test_api.py  test_database.py  test_rag.py  test_registry.py
tools/: build_version.py  download_embedding.py  download_model.py  finetune.py  finetune_llama.py  generate_license.py  install_customer.py  test_medical_accuracy.py  test_report.json
tools/research/: README.md  __init__.py  cleaner.py  converter.py  scraper.py  topics.py
training/: README.md  build_english_dataset.py  expand_dataset.py  llama_english_medical.jsonl  medical_qa_dataset.jsonl  split_dataset.py  validate_dataset.py
training/llama_splits/: test.jsonl  train.jsonl  valid.jsonl
training/splits/: test.jsonl  train.jsonl  valid.jsonl
voice/: .env.example  agent.py
website/: index.html  privacy.html  terms.html
website/css/: style.css
website/js/: hardware-checker.js  i18n.js  main.js
